Change remaps for debug and breakpoints

--- a/.ideavimrc
+++ b/.ideavimrc
@@ -1,17 +1,21 @@
 source ~/.vimrc
 
 """"""""""""""""""""""""""""""""""""""""""""""" debug """"""""""""""""""""""""""""""""""""""""""""""
-nnoremap <leader>rr :action Run<CR>
 nnoremap <leader>x :action Stop<CR>
-nnoremap <leader>dd :action Debug<CR>
-nnoremap <leader>dn :action StepOver<CR>
-nnoremap <leader>di :action StepInto<CR>
-nnoremap <leader>do :action StepOut<CR>
-nnoremap <leader>dr :action Resume<CR>
-nnoremap <leader>db :action ToggleLineBreakpoint<CR>
-nnoremap <leader>dm :action XDebugger.MuteBreakpoints<CR>
-nnoremap <leader>drb :action Debugger.RemoveAllBreakpointsInFile<CR>
-nnoremap <leader>drB :action Debugger.RemoveAllBreakpoints<CR>
+nnoremap <leader>ru :action Run<CR>
+nnoremap <leader>d :action Debug<CR>
+nnoremap <leader>r :action Resume<CR>
+nnoremap <leader>o :action StepOver<CR>
+nnoremap <leader>i :action StepInto<CR>
+nnoremap <leader>oo :action StepOut<CR>
+nnoremap <leader>rc :action ForceRunToCursor<CR>
+"""""""""""""""""""""""""""""""""""""""""" breakpoints """""""""""""""""""""""""""""""""""""""""""""
+nnoremap <leader>b :action ToggleLineBreakpoint<CR>
+nnoremap <leader>be :action EditBreakpoint<CR>
+nnoremap <leader>ba :action ViewBreakpoints<CR>
+nnoremap <leader>bm :action XDebugger.MuteBreakpoints<CR>
+nnoremap <leader>bra :action Debugger.RemoveAllBreakpointsInFile<CR>
+nnoremap <leader>brA :action Debugger.RemoveAllBreakpoints<CR>
 """"""""""""""""""""""""""""""""""""""""""""""" find """""""""""""""""""""""""""""""""""""""""""""""
 nnoremap <leader>f :action FindInPath<CR>
 nnoremap <leader>fa :action GotoAction<CR>
