--- a/.ideavimrc
+++ b/.ideavimrc
@@ -16,11 +16,15 @@ nnoremap <leader>ba :action ViewBreakpoints<CR>
 nnoremap <leader>bm :action XDebugger.MuteBreakpoints<CR>
 nnoremap <leader>bra :action Debugger.RemoveAllBreakpointsInFile<CR>
 nnoremap <leader>brA :action Debugger.RemoveAllBreakpoints<CR>
+"""""""""""""""""""""""""""""""""""""""""""""""" new """""""""""""""""""""""""""""""""""""""""""""""
+nnoremap <leader>n :action NewElement<CR>
 """"""""""""""""""""""""""""""""""""""""""""""" find """""""""""""""""""""""""""""""""""""""""""""""
 nnoremap <leader>f :action FindInPath<CR>
 nnoremap <leader>fa :action GotoAction<CR>
 nnoremap <leader>fc :action GotoClass<CR>
 nnoremap <leader>ff :action GotoFile<CR>
+" nnoremap <leader>fu :action ShowUsages<CR>                                       " gd works for this
+nnoremap <leader>fu :action FindUsages<CR>
 nnoremap <leader>fm :action FileStructurePopup<CR>
 nnoremap <leader>fi :action GotoImplementation<CR>
 nnoremap <leader>fs :action GotoSuperMethod<CR>
@@ -36,7 +40,8 @@ nnoremap <leader>pp :action PreviousProjectWindow<CR>
 nnoremap <leader>nb :action GotoNextBookmark<CR>
 nnoremap <leader>pb :action GotoPreviousBookmark<CR>
 """"""""""""""""""""""""""""""""""""""""""""" refactor """""""""""""""""""""""""""""""""""""""""""""
-nnoremap <Leader>rc :action ReformatCode<CR>
+nnoremap <leader>rc :action ReformatCode<CR>
+nnoremap <leader>ri :action OptimizeImports<CR>
 nnoremap <leader>re :action RenameElement<CR>
 """"""""""""""""""""""""""""""""""""""""""""""""" git """"""""""""""""""""""""""""""""""""""""""""""
 nnoremap <leader>nc :action VcsShowNextChangeMarker<CR>
