--- a/.ideavimrc
+++ b/.ideavimrc
@@ -52,7 +52,7 @@ nnoremap <leader>a :action Annotate<CR>
 nnoremap ,v :e ~/.vimrc<CR>
 nnoremap ,i :e ~/.ideavimrc<CR>
 nnoremap ,r :action IdeaVim.ReloadVimRc.reload<CR>
-nnoremap ,ta :action VimFindActionIdAction<CR>
+nnoremap ,t :action VimFindActionIdAction<CR>
 """"""""""""""""""""""""""""""""""""""""""""""" tabs """""""""""""""""""""""""""""""""""""""""""""""
 " nnoremap <leader>w :action CloseContent<CR>                                                  "YAGNI
 nnoremap <leader>wa :action CloseAllEditorsButActive<CR>
