--- a/.ideavimrc
+++ b/.ideavimrc
@@ -57,6 +57,7 @@ nnoremap ,pc :action VcsShowPrevChangeMarker<CR>
 nnoremap ,u :action Vcs.RollbackChangedLines<CR>
 nnoremap ,a :action Annotate<CR>
 nnoremap ,d :action Compare.SameVersion<CR>
+nnoremap ,h :action Vcs.ShowHistoryForBlock<CR>
 """"""""""""""""""""""""""""""""""""""""""""""" tabs """""""""""""""""""""""""""""""""""""""""""""""
 nnoremap <leader>w :action CloseContent<CR>
 nnoremap <leader>wa :action CloseAllEditorsButActive<CR>
