--- a/.ideavimrc
+++ b/.ideavimrc
@@ -66,13 +66,14 @@ nnoremap <leader>wa :action CloseAllEditorsButActive<CR>
 nnoremap <leader>wum :action CloseAllUnmodifiedEditors<CR>
 nnoremap <leader>wup :action CloseAllUnpinnedEditors<CR>
 nnoremap <leader>p :action PinActiveTab<CR>
-""""""""""""""""""""""""""""""""""""""""""" tool windows """""""""""""""""""""""""""""""""""""""""""
+"""""""""""""""""""""""""""""""""""""""""""""" windows """""""""""""""""""""""""""""""""""""""""""""
 nnoremap <leader>t :action ActivateTerminalToolWindow<CR>
 nnoremap <leader>th :action Terminal.OpenInReworkedTerminal<CR>
 nnoremap <leader>lw :action JumpToLastWindow<CR>
 " :action FocusEditor                     "Should stick with <Esc>. Mapping in IDE works like shit on Windows (either <C-e> or <A-e>)
 " :action HideActiveWindow                "same as abowe, weired on Windows. Shoud stick with <S-Esc>
 nnoremap <leader>ha :action HideAllWindows<CR>
+nnoremap <leader>s :action ShowSettings<CR>
 """"""""""""""""""""""""""""""""""""""""""""""" zen """"""""""""""""""""""""""""""""""""""""""""""""
 nnoremap <leader>z :action ToggleDistractionFreeMode<CR>
 " nnoremap <leader>f :action ToggleFullScreen<CR>                                      "weird behaviour
