--- a/hyprland/.config/hypr/hyprlock.conf
+++ b/hyprland/.config/hypr/hyprlock.conf
@@ -1,3 +1,4 @@
+source = ~/.config/hypr/vars.conf
 source = ~/.config/hypr/macchiato.conf
 
 $accent = $mauve
@@ -14,8 +15,8 @@ general {
 # BACKGROUND
 background {
     monitor =
-    path = ~/.config/backgrounds/shaded.png
-    blur_passes = 2
+    path = $WALLPAPER
+    blur_passes = 0
     color = $base
 }
 
