Update autostart processes

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -48,6 +48,7 @@ exec-once = hyprlock
 exec-once = waybar & hypridle & hyprpaper
 exec-once = [workspace 1 silent] $terminal & $terminal 
 exec-once = [workspace 2 silent] $browser 
+exec-once = [workspace 3 silent] $fileManager
 # exec-once = uwsm app -- blueman-applet
 # exec-once = nm-applet &
 
