--- a/ohmyposh/.config/ohmyposh/zen.toml
+++ b/ohmyposh/.config/ohmyposh/zen.toml
@@ -1,165 +1,77 @@
-console_title_template = '{{ .Shell }} in {{ .Folder }}'
-version = 4
+#:schema https://raw.githubusercontent.com/JanDeDobbeleer/oh-my-posh/main/themes/schema.json
+
+version = 2
 final_space = true
-
-[palette]
-  black = '#262B44'
-  blue = '#4B95E9'
-  green = '#59C9A5'
-  orange = '#F07623'
-  red = '#D81E5B'
-  white = '#E0DEF4'
-  yellow = '#F3AE35'
-
-[secondary_prompt]
-  template = '<p:yellow,transparent></><,p:yellow> > </><p:yellow,transparent></> '
-  foreground = 'p:black'
-  background = 'transparent'
-
-[transient_prompt]
-  template = '<p:yellow,transparent></><,p:yellow> {{ .Folder }} </><p:yellow,transparent></> '
-  foreground = 'p:black'
-  background = 'transparent'
-
-[upgrade]
-  source = 'cdn'
-  interval = '168h'
-  auto = false
-  notice = false
+console_title_template = '{{ .Shell }} in {{ .Folder }}'
 
 [[blocks]]
   type = 'prompt'
   alignment = 'left'
+  newline = true
 
   [[blocks.segments]]
-    leading_diamond = ''
-    trailing_diamond = ''
-    template = ' {{ if .SSHSession }} {{ end }}{{ .UserName }} '
-    foreground = 'p:black'
-    background = 'p:yellow'
-    type = 'session'
-    style = 'diamond'
-
-  [[blocks.segments]]
-    template = '  {{ path .Path .Location }} '
-    foreground = 'p:white'
-    powerline_symbol = ''
-    background = 'p:orange'
     type = 'path'
-    style = 'powerline'
+    style = 'plain'
+    background = 'transparent'
+    foreground = 'blue'
+    template = '{{ .Path }}'
 
-    [blocks.segments.options]
-      style = 'folder'
+    [blocks.segments.properties]
+      style = 'full'
 
   [[blocks.segments]]
-    template = ' {{ if .UpstreamURL }}{{ url .UpstreamIcon .UpstreamURL }} {{ end }}{{ .HEAD }}{{if .BranchStatus }} {{ .BranchStatus }}{{ end }}{{ if .Working.Changed }}  {{ .Working.String }}{{ end }}{{ if .Staging.Changed }}  {{ .Staging.String }}{{ end }} '
-    foreground = 'p:black'
-    powerline_symbol = ''
-    background = 'p:green'
     type = 'git'
-    style = 'powerline'
-    foreground_templates = ['{{ if or (.Working.Changed) (.Staging.Changed) }}p:black{{ end }}', '{{ if and (gt .Ahead 0) (gt .Behind 0) }}p:white{{ end }}', '{{ if gt .Ahead 0 }}p:white{{ end }}']
-    background_templates = ['{{ if or (.Working.Changed) (.Staging.Changed) }}p:yellow{{ end }}', '{{ if and (gt .Ahead 0) (gt .Behind 0) }}p:red{{ end }}', '{{ if gt .Ahead 0 }}#49416D{{ end }}', '{{ if gt .Behind 0 }}#7A306C{{ end }}']
+    style = 'plain'
+    foreground = 'p:grey'
+    background = 'transparent'
+    template = ' {{ .HEAD }}{{ if or (.Working.Changed) (.Staging.Changed) }}*{{ end }} {{ if gt .Behind 0 }}⇣{{ end }}{{ if gt .Ahead 0 }}⇡{{ end }}'
 
-    [blocks.segments.options]
-      branch_template = '{{ trunc 25 .Branch }}'
+    [blocks.segments.properties]
+      branch_icon = ''
+      commit_icon = '@'
       fetch_status = true
-      fetch_upstream_icon = true
-
-  [[blocks.segments]]
-    template = '  '
-    foreground = 'p:white'
-    powerline_symbol = ''
-    background = 'p:yellow'
-    type = 'root'
-    style = 'powerline'
-
-  [[blocks.segments]]
-    leading_diamond = '<transparent,background></>'
-    trailing_diamond = ''
-    template = ' {{ if gt .Code 0 }}{{ else }}{{ end }} '
-    foreground = 'p:white'
-    background = 'p:blue'
-    type = 'status'
-    style = 'diamond'
-    background_templates = ['{{ if gt .Code 0 }}p:red{{ end }}']
-
-    [blocks.segments.options]
-      always_enabled = true
 
 [[blocks]]
   type = 'rprompt'
+  overflow = 'hidden'
 
   [[blocks.segments]]
-    template = ' '
-    foreground = 'p:green'
-    background = 'transparent'
-    type = 'node'
+    type = 'executiontime'
     style = 'plain'
+    foreground = 'yellow'
+    background = 'transparent'
+    template = '{{ .FormattedMs }}'
 
-    [blocks.segments.options]
-      display_mode = 'files'
-      fetch_package_manager = false
-      home_enabled = false
+    [blocks.segments.properties]
+      threshold = 5000
+
+[[blocks]]
+  type = 'prompt'
+  alignment = 'left'
+  newline = true
 
   [[blocks.segments]]
-    template = ' '
-    foreground = 'p:blue'
-    background = 'transparent'
-    type = 'go'
+    type = 'text'
     style = 'plain'
-
-    [blocks.segments.options]
-      fetch_version = false
-
-  [[blocks.segments]]
-    template = ' '
-    foreground = 'p:yellow'
+    foreground_templates = [
+      "{{if gt .Code 0}}red{{end}}",
+      "{{if eq .Code 0}}magenta{{end}}",
+    ]
     background = 'transparent'
-    type = 'python'
-    style = 'plain'
+    template = '❯'
 
-    [blocks.segments.options]
-      display_mode = 'files'
-      fetch_version = false
-      fetch_virtual_env = false
+[transient_prompt]
+  foreground_templates = [
+    "{{if gt .Code 0}}red{{end}}",
+    "{{if eq .Code 0}}magenta{{end}}",
+  ]
+  background = 'transparent'
+  template = '❯ '
 
-  [[blocks.segments]]
-    template = 'in <p:blue><b>{{ .Name }}</b></> '
-    foreground = 'p:white'
-    background = 'transparent'
-    type = 'shell'
-    style = 'plain'
+[secondary_prompt]
+  foreground = 'magenta'
+  background = 'transparent'
+  template = '❯❯ '
 
-  [[blocks.segments]]
-    template = 'at <p:blue><b>{{ .CurrentDate | date "15:04:05" }}</b></>'
-    foreground = 'p:white'
-    background = 'transparent'
-    type = 'time'
-    style = 'plain'
-
-[[tooltips]]
-  leading_diamond = ''
-  trailing_diamond = ''
-  template = '  {{ .Profile }}{{ if .Region }}@{{ .Region }}{{ end }} '
-  foreground = 'p:white'
-  background = 'p:orange'
-  type = 'aws'
-  style = 'diamond'
-  tips = ['aws']
-
-  [tooltips.options]
-    display_default = true
-
-[[tooltips]]
-  leading_diamond = ''
-  trailing_diamond = ''
-  template = '  {{ .Name }} '
-  foreground = 'p:white'
-  background = 'p:blue'
-  type = 'az'
-  style = 'diamond'
-  tips = ['az']
-
-  [tooltips.options]
-    display_default = true
+[palette]
+grey = "#6c6c6c"
