Change hyprlands borders

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -92,11 +92,12 @@ general {
     gaps_in = 4
     gaps_out = 8
 
-    border_size = 2
+    border_size = 3
 
     # https://wiki.hypr.land/Configuring/Variables/#variable-types for info about colors
-    col.active_border = $mauve $flamingo 90deg
-    col.inactive_border = $subtext0
+    # col.active_border = $mauve $flamingo 90deg
+    col.active_border = $flamingo
+    col.inactive_border = $surface0
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
