--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -45,7 +45,7 @@ $browser = zen-browser
 # Or execute your favorite apps at launch like this:
 
 exec-once = hyprlock
-exec-once = waybar & hypridle & hyprpaper
+exec-once = waybar & hypridle & hyprpaper & swaync
 exec-once = [workspace 1 silent] $terminal & $terminal 
 exec-once = [workspace 2 silent] $browser 
 exec-once = [workspace 3 silent] $fileManager
