--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -45,13 +45,13 @@ $browser = zen-browser
 # Or execute your favorite apps at launch like this:
 
 exec-once = hyprlock
-exec-once = waybar & hypridle & hyprpaper & swaync
-exec-once = [workspace 1 silent] $terminal & $terminal 
+exec-once = hypridle
+exec-once = hyprpaper
+exec-once = waybar
+exec-once = swaync
+exec-once = [workspace 1 silent] $terminal
 exec-once = [workspace 2 silent] $browser 
 exec-once = [workspace 3 silent] $fileManager
-# exec-once = uwsm app -- blueman-applet
-# exec-once = nm-applet &
-
 
 #############################
 ### ENVIRONMENT VARIABLES ###
