--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -61,7 +61,7 @@ exec-once = [workspace 3 silent] $fileManager
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-env = HYPRSHOT_DIR,$HOME/Screenshots
+env = HYPRSHOT_DIR,$HOME/Pictures/Screenshots
 
 
 ###################
